crates/carta/tests/snapshots/golden_writer__beamer__table__table-colspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\multicolumn{2}{@{}l@{}}{%
wide} \\
a & b \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
