crates/carta/tests/snapshots/golden_writer__beamer__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}
  >{\raggedright\arraybackslash}p{(\linewidth - 6\tabcolsep) * \real{0.2500}}
  >{\raggedright\arraybackslash}p{(\linewidth - 6\tabcolsep) * \real{0.2500}}
  >{\raggedright\arraybackslash}p{(\linewidth - 6\tabcolsep) * \real{0.2500}}
  >{\raggedright\arraybackslash}p{(\linewidth - 6\tabcolsep) * \real{0.2500}}@{}}
\toprule\noalign{}
A & B & C & D \\
\midrule\noalign{}
\endhead
& \vskip & \begin{itemize}
\tightlist
\item
\item
\end{itemize} & ok \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
