crates/carta/tests/snapshots/golden_writer__beamer__table__table-empty-header.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
& \\
\midrule\noalign{}
\endhead
a & b \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
