crates/carta/tests/snapshots/golden_writer__beamer__table__table-foot.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endhead
a & b \\
\midrule\noalign{}
sum & 3 \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
