crates/carta/tests/snapshots/golden_writer__beamer__table__table-multiple-bodies.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
h1 & h2 \\
\midrule\noalign{}
\endhead
a1 & a2 \\
b1 & b2 \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
