crates/carta/tests/snapshots/golden_writer__beamer__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\multirow{2}{*}{tall} & a \\
& b \\
\bottomrule\noalign{}
\end{longtable}
}
\end{frame}
